k8/api-starter-local.yml
apiVersion: v1
kind: Service
metadata:
  name: api-starter-service
spec:
  type: NodePort
  selector:
    app: api-starter-pod
  ports:
    - port: 8080
      nodePort: 30001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-starter-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-starter-pod
  template:
    metadata:
      labels:
        app: api-starter-pod
    spec:
      containers:
        - image: api-starter:v2
          name: api-starter-container
          imagePullPolicy: Never
