k8/api-start.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-starter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: api-starter
  name: api-starter-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-starter-pod
  template:
    metadata:
      labels:
        app: api-starter-pod
    spec:
      containers:
        - image: 127322177288.dkr.ecr.us-east-2.amazonaws.com/rest-api:v1
          imagePullPolicy: Always
          name: api-starter-container
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: api-starter
  name: api-starter-service
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
  selector:
    app: api-starter-pod
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: api-starter
  name: api-starter-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-starter-service
                port:
                  number: 8080
